[package]
name = "space_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
flume = "0.10.14"
indexmap = { version = "1.9.3", features = ["serde"] }
plotters = "0.3.4"
rand = "0.8.5"
serde = "1.0.157"
serde_json = "1.0.94"
voronator = "0.2.1"
zenoh = "0.7.0-rc"
