[package]
name = "space_net"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0/EPL-2.0"

[lib]
name = "space_net"
crate-type = ["rlib","cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bincode = "1.3.3"
dirs = "5.0.0"
flume = "0.10.14"
futures = "0.3.28"
indexmap = { version = "2.0.0", features = ["serde"] }
libc = "0.2.141"
nalgebra = "0.32.2"
plotters = "0.3.4"
rand = "0.8.5"
serde = "1.0.157"
serde_json = "1.0.103"
uuid = "1.4.0"
voronator = "0.2.1"
warp = "0.3.5"
zenoh = "0.7.0-rc"
